--- a/HTML files/Forms/form.html
+++ b/HTML files/Forms/form.html
@@ -1,28 +1,34 @@
 <form>
-    
+    <!--text-->
     <label for="username">Username:</label>
     <input type="text" id="username" name="username">
 
+    <!--password-->
     <label for="password">Password:</label>
     <input type="password" id="password" name="password">
 
+    <!--checkbox-->
     <label for="subscribe">Subscribe to Newsletter:</label>
     <input type="checkbox" id="subscribe" name="subscribe">
 
+    <!--circle fill radio-->
     <label for="dog">Dog</label>
     <input type="radio" id="dog" name="pet_preference" value="dog">
     <label for="cat">Cat</label>
     <input type="radio" id="cat" name="pet_preference" value="cat">
 
+    <!--message adjustable-->
     <label for="message">Message:</label>
     <textarea id="message" name="message"></textarea>
 
+    <!--drop down select-->
     <label for="food">Favorite Food:</label>
     <select id="food" name="food">
       <option value="pizza">Pizza</option>
       <option value="sushi">Sushi</option>
     </select>
 
+    <!--insert pic-->
     <label for="profile-pic">Profile Picture:</label>
     <input type="file" id="profile-pic" name="profile-pic" alt="Upload a profile picture">
   </form>
