--- a/HTML files/Build with Common Tags/hobby.html
+++ b/HTML files/Build with Common Tags/hobby.html
@@ -19,6 +19,6 @@
 		<p>On this YouTube video link, it provides League of Legends tips and tricks about the whole game. <a href="https://www.youtube.com/watch?v=mKdmhnMz4W4" target="_blank">Youtube Video Link</a></p>
 	
 		<h2>Lear more About Video Gaming.</h2>
-		<img src="images/ss.png"Image of Youtube">
+		<img src="images/ss.png" alt="Youtube Video">
 	</body>
 </html>
