--- a/HTML files/Build with Common Tags/hobby.html
+++ b/HTML files/Build with Common Tags/hobby.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+	
     <title> Great Player</title>
     <body>
         <h1>Video Gaming: How to become a Great Player</h1>
@@ -19,6 +21,7 @@
 		<p>On this YouTube video link, it provides League of Legends tips and tricks about the whole game. <a href="https://www.youtube.com/watch?v=mKdmhnMz4W4" target="_blank">Youtube Video Link</a></p>
 	
 		<h2>Lear more About Video Gaming.</h2>
-		<img src="images/ss.png" alt="Youtube Video">
+		<img src="images/ss.png" alt="Youtube picture">
+
 	</body>
 </html>
