--- a/HTML files/My Portfolio/portfolio.html
+++ b/HTML files/My Portfolio/portfolio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <title>Welcome to My Portfolio</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>Hello! I am a passionate developer who loves creating web applications and learning new technologies.</p>
-            <img src="placeholder.jpg" alt="A placeholder image for my portfolio">
+            <img src="pictures/ssplaceholder.png" alt="A placeholder image for my portfolio">
         </section>
 
         
