--- a/HTML files/To-Do List/index.html
+++ b/HTML files/To-Do List/index.html
@@ -17,12 +17,15 @@
         <form>
             <input type="text" id="task-input" placeholder="Enter your task here...">
             <button id="add-task">Add Task</button>
+            <!-- <input type="submit"> -->
         </form>
-
+            
         <main>
-            <div class="p1">Learn CSS</div>
-            <div class="p2">Complete Assignment</div>
-            <div class="p1">Watch a Tutorial</div>
+            <ul>
+                <li class="p1">Learn CSS</li>
+                <li class="p2">Learn CSS</li>
+                <li class="p1">Learn CSS</li>
+            </ul>
         </main>
     </div>
 </body>
