--- a/HTML files/Netflix/index.html
+++ b/HTML files/Netflix/index.html
@@ -80,11 +80,9 @@
     </section>
 
     <footer>
-        <main>
-            <p class="readytowatch">Ready to watch? Enter your email to create or restart your membership.</p>
-            <form action=""><input type="text" class="email" placeholder="Email Address"><a href="#"
-                    class="get-started">Get Started ></a></form>
-        </main>
+        <p class="readytowatch">Ready to watch? Enter your email to create or restart your membership.</p>
+        <form action=""><input type="text" class="email" placeholder="Email Address"><a href="#" class="get-started">Get
+                Started ></a></form>
     </footer>
 
 </body>
