--- a/HTML files/Netflix/index.html
+++ b/HTML files/Netflix/index.html
@@ -11,8 +11,7 @@
 <body>
     <section class="section-1">
         <header>
-            <svg>
-                id="netflix_icon" viewBox="0 0 111 30" version="1.1" xmlns="http://www.w3.org/2000/svg"
+            <svg id="netflix_icon" viewBox="0 0 111 30" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img">
                 <g>
                     <path fill="#e50914"
