update stack overflow

--- a/HTML files/StackOverflow/index.html
+++ b/HTML files/StackOverflow/index.html
@@ -96,7 +96,7 @@
                     </p>
                     <a class="signup" href="">Careers at Stack Overflow</a>
                 </div>
-                <img src="svg files/Stack Overflow/illo-home-careers.png" alt="">
+                <img class="right" src="svg files/Stack Overflow/illo-home-careers.png" alt="">
             </section>
         </main>
     </div>
