--- a/HTML files/Bootstrap/index.html
+++ b/HTML files/Bootstrap/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
-        <div class="container-fluid">
+        <div class="container-fluid w-75">
             <a class="navbar-brand" href="#">My Website</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,10 +31,10 @@
         <h1 class="text-center">Welcome to Bootstrap</h1>
         <p class="text-center">This is a simple example of a Bootstrap setup.</p>
     </div>
-    <div class="container text-center p-5">
-        <div class="row bg-light p-5">
-            <div class="col-6">.col-6</div>
-            <div class="col-6">.col-6</div>
+    <div class="container text-start p-5">
+        <div class="row p-5">
+            <div class="col-md-4 bg-light p-3 rounded-3 border">column 1</div>
+            <div class="col-md-4 bg-light p-3 offset-md-4 rounded-3 border ">column 2</div>
         </div>
     </div>
     <div class="container w-50">
@@ -48,7 +48,7 @@
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
         </div>
         <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+            <label for="exampleFormControlTextarea1" class="form-label">Message</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <div class="collumn">
