--- a/JS files/Character Selection/index.html
+++ b/JS files/Character Selection/index.html
@@ -15,7 +15,7 @@
             <h2>Select a Hero</h2>
             <div class="character-flex">
                 <button class="character-item" data-name="Katarina" data-image="images/katarina.png"
-                    data-gif="images/katarina.gif" data-description="The Sinister Blade">
+                    data-gif="images/katarina.png" data-description="The Sinister Blade">
                     <img src="images/katarina.png" alt="katarina" class="character-image">
                     <p>Katarina</p>
                 </button>
@@ -25,12 +25,12 @@
                     <p>Fizz</p>
                 </button>
                 <button class="character-item" data-name="Nilah" data-image="images/nilah.png"
-                    data-gif="images/nilah.gif" data-description="The Joy Unbound">
+                    data-gif="images/nilah.png" data-description="The Joy Unbound">
                     <img src="images/nilah.png" alt="nilah" class="character-image">
                     <p>Nilah</p>
                 </button>
                 <button class="character-item" data-name="Yasuo" data-image="images/yasuo.png"
-                    data-gif="images/yasuo.gif" data-description="The Unforgiven">
+                    data-gif="images/yasuo.png" data-description="The Unforgiven">
                     <img src="images/yasuo.png" alt="yasuo" class="character-image">
                     <p>Yasuo</p>
                 </button>
@@ -49,7 +49,7 @@
                     <img src="images/seena.png" alt="seena" class="character-image">
                     <p>Seena</p>
                 </button>
-                <button class="character-item" data-name="Kayn" data-image="images/kayn.png" data-gif="images/kayn.gif"
+                <button class="character-item" data-name="Kayn" data-image="images/kayn.png" data-gif="images/kayn.png"
                     data-description="The Shadow Reaper / The Shadow Assassin">
                     <img src="images/kayn.png" alt="kayn" class="character-image">
                     <p>Kayn</p>
